updating app styling

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,17 @@
-<header>
-  <h1>{{title}}</h1>
+{{!-- <h1>{{title}}</h1> --}}
 
-  <a href="/">Weather</a>
-  <a href="/about">About</a>
-  <a href="/help">Help</a>
+<header>
+  <div class="header_container">
+    <a class="header_subcontainer" href="/">
+      <img class="logo" src="/img/me.png" alt="logo" />
+      <h2 class="logo_title">GoOutWeather</h2>
+    </a>
+
+    <div class="header_subcontainer">
+      <a href="/">Weather</a>
+      <a href="/about">About</a>
+      <a href="/help">Help</a>
+    </div>
+
+  </div>
 </header>
