--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,332 @@
 * {
-    box-sizing: border-box;
+    box-sizing: content-box;
     padding: 0;
     margin: 0;
 }
 
 body {
     color: #333333;
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 650px;
-    margin: 0 auto;
-    padding: 0 16px;
+    font-family: 'Roboto', sans-serif;
+    width: 100vw;
+    /* margin: 0 auto; */
+    /* padding: 0 16px; */
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* transition: background-image 1s ease-in-out; */
+    background-size: cover;
+    position: relative;
+    /* border: 2px green solid; */
+    background-repeat: no-repeat;
+    overflow: hidden
+        /* background-image: url('/img/alps.jpg'); */
+
+        /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/iceland.jpg);
+    background-size: cover; */
 }
 
-.main-content {
-    flex-grow: 1;
+/* .gradient-background {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), background-image);
+} */
+
+
+footer {
+    /* color: #888888; */
+    color: white;
+    /* border-top: 1px solid #eeeeee; */
+    border-top: 1px solid white;
+    margin-top: 16px;
+    padding: 16px 0;
+    position: absolute;
+    bottom: 10px;
+    width: 100vw;
+    text-align: center;
+
 }
+
+header {
+    margin-top: 16px;
+    margin-bottom: 48px;
+
+}
+
+h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a {
+    /* color: #888888; */
+    color: white;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+#message-1 {
+    color: white;
+
+}
+
+.help_text_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    /* border: 2px solid red; */
+}
+
+#linkedin {
+    color: white;
+    text-decoration: none;
+    background-color: rgba(51, 152, 219, 0.35);
+    border-radius: 5px;
+    padding: 10px 20px;
+
+}
+
+
+
+.help_text {
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.weather_icons_container {
+    margin-top: 20px;
+    width: 40vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    justify-content: space-between;
+}
+
+.weather_icon {
+    width: 50px;
+
+}
+
+.main_container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+.upper_container {
+    /* border: red 2px solid; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 60vw;
+    height: 600px;
+    background-color: #ebebeb;
+    /* border: red solid 2px; */
+    background-color: transparent;
+    position: relative;
+
+}
+
+.search_input {
+    /* border: 1px solid #cccccc; */
+    /* border: red solid 2px; */
+    outline: none;
+    border: none;
+    padding: 8px;
+    width: 100%;
+
+}
+
+.search_input:focus {
+    /* border: none; */
+    outline: none;
+    /* background-color: yellow; */
+    /* outline: none; */
+}
+
+button {
+    cursor: pointer;
+    /* border: 1px solid #888888; */
+    border: 1px solid white;
+    color: #000000;
+    background-color: white;
+    padding: 8px
+}
+
+.logo {
+    width: 40px;
+    height: 40px;
+}
+
+.header_container {
+    /* border: green solid 2px; */
+    display: flex;
+    justify-content: space-around;
+    height: 68px;
+}
+
+.header_subcontainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+}
+
+.logo_title {
+    /* background-color: #888888; */
+    color: #eeeeee;
+}
+
+.about_container {
+    /* border: green solid 2px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    font-weight: 700;
+}
+
+.form {
+    /* border: green 2px solid; */
+    display: flex;
+    width: 650px;
+    height: 50px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.form_container {
+    position: absolute;
+    top: 10px;
+    display: flex;
+    /* border: 2px solid orange; */
+    height: 80px;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.forecast-container {
+    /* border: 2px solid orangered; */
+    height: 400px;
+    padding: 20px;
+    background-color: rgb(235, 235, 235, 0.8);
+    width: 40vw;
+    display: none;
+}
+
+.first_subcontainer {
+    display: flex;
+    justify-content: center;
+}
+
+.date {
+    color: black;
+    font-weight: 600;
+}
+
+.second_subcontainer {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.third_subcontainer {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    height: 50px;
+    /* border: black solid 2px; */
+    margin: 20px 0;
+}
+
+.img_and_temparture_container {
+    position: relative;
+}
+
+#img_and_temparture {
+    font-size: 30px;
+    position: absolute;
+    top: -15px;
+    /* border: blue solid 2px; */
+    display: flex;
+    justify-content: space-around;
+}
+
+.degrees {
+    color: black;
+    padding: 10px;
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.weather_img {
+    width: 70px;
+    height: 70px;
+}
+
+.realfeel {
+    color: black;
+    font-weight: 500;
+    font-size: 25px;
+}
+
+.fourth_subcontainer {
+    display: flex;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.grid_data_subcontainer {
+    display: grid;
+    width: 100%;
+    height: 400px;
+    /* border: yellowgreen 2px solid; */
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 60px;
+}
+
+.flexbox_weather_data {
+    display: flex;
+    /* border: red solid 2px; */
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+/* .fifth_subcontainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+} */
+
+
+/* #current_weather {
+    grid-area: 2/1/3/2;
+}
+
+.time {
+    grid-area: 2/6/3/8;
+}
+
+.degrees {
+    grid-area: 3/2/4/3;
+
+}
+
+.weather_img {
+    grid-area: 3/1/4/2;
+}  */
+
+
+
+/* 
+
 
 footer {
     color: #888888;
@@ -63,4 +372,4 @@ button {
 p {
 
     margin: 10px 0;
-}
+} */
