--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="/img/weather-icon.png">
+    <script src="js/app.js" defer></script>
+    <title>404 Page</title>
+  </head>
+  <body>
     <div class="main-content">
-    {{>header}}
-    <p>{{errorMessage}}</p>
+        {{>header}}
+        <p>{{errorText}}</p>
     </div>
 
-    {{>footer}}
-</body>
+        {{>footer}}
+  </body>
 </html>
