--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,16 +3,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="img/weather-icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="/img/weather-icon.png">
+    <script src="js/app.js" defer></script>
     <title>About</title>
   </head>
   <body>
     <div class="main-content">
       {{>header}}
-      <p>This site was created by Matan Shaked. It uses data from weatherstack.com and positionstack.com!</p>
-      <img class="portrait" src="img/harry-potter.png" />
+      <div class="about_container">
+      <p>This site was created by Matan Shaked. </p>
+      <p>It uses data from weatherstack.com and positionstack.com!</p>
+        <div class="weather_icons_container">
+          <img class="weather_icon" src="/img/sunny.png" />  
+          <img class="weather_icon" src="/img/partly-cloud.png"/>  
+          <img class="weather_icon" src="/img/clouds.png" />  
+          <img class="weather_icon" src="/img/rainy cloud.png" />  
+          <img class="weather_icon" src="/img/storm.png" />  
+          <img class="weather_icon" src="/img/snow.png" />  
+          <img class="weather_icon" src="/img/me.png" />  
+        </div> 
+      </div>
+
     </div>
 
     {{>footer}}
+
   </body>
 </html>
