--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -59,7 +59,7 @@
                   <p class="UV_Index"></p>
                   
               </div>
-              <div id="flexbox5" class="flexbox_weather_data">
+              <div id="flexbox5" class="flex_place">
                   <p class="location_title"></p>
               </div>
               <div id="flexbox6" class="flexbox_weather_data">
