--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,6 +64,7 @@ header a {
 
 #message-1 {
     color: white;
+    margin-top: 10px;
 
 }
 
@@ -205,7 +206,7 @@ button {
     top: 10px;
     display: flex;
     /* border: 2px solid orange; */
-    height: 80px;
+    height: 100px;
     flex-direction: column;
     align-items: center;
 
@@ -213,7 +214,8 @@ button {
 
 .forecast-container {
     /* border: 2px solid orangered; */
-    height: 400px;
+    margin-top: 80px;
+    height: 450px;
     padding: 20px;
     background-color: rgb(235, 235, 235, 0.8);
     width: 40vw;
@@ -299,6 +301,16 @@ button {
     font-size: 18px;
     font-weight: 500;
 }
+
+.flex_place {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 18px;
+    font-weight: 500;
+
+}
+
+/* .location_title {} */
 
 /* .fifth_subcontainer {
     display: grid;
