--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,9 +38,10 @@ footer {
     margin-top: 16px;
     padding: 16px 0;
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     width: 100vw;
     text-align: center;
+
 
 }
 
@@ -112,9 +113,7 @@ header a {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
-
-
+    align-items: center
 }
 
 .upper_container {
@@ -203,7 +202,7 @@ button {
 
 .form_container {
     position: absolute;
-    top: 10px;
+    top: -30px;
     display: flex;
     /* border: 2px solid orange; */
     height: 100px;
@@ -214,7 +213,7 @@ button {
 
 .forecast-container {
     /* border: 2px solid orangered; */
-    margin-top: 80px;
+    /* margin-top: 80px; */
     height: 450px;
     padding: 20px;
     background-color: rgb(235, 235, 235, 0.8);
