--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -16,7 +16,7 @@
       <div class="help_text_container">
         <p class="help_text">{{helpText}}</p>
         <br>
-        <p class="help_text" >You are also welcome to contact me via my LinkedIn Profile on Clicking <a id="linkedin" href="https://www.linkedin.com/in/matan-shaked-647788230/" target="_blank">here</a> </p>
+        <p class="help_text" >You are also welcome to contact me via my LinkedIn Profile by Clicking <a id="linkedin" href="https://www.linkedin.com/in/matan-shaked-647788230/" target="_blank">here</a> </p>
         <br>
         <p class="help_text">Enjoy!</p>
         </div>
