--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@ body {
     background-size: cover;
     position: relative;
     background-repeat: no-repeat;
-    overflow: auto
+    overflow: hidden
 }
 
 
